--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     
+    <div class="header">
+
+    </div>
+
+    <div class="sidebar">
+
+    </div>
+
+    <div class="main-container">
+        
+    </div>
+
 </body>
 </html>
