--- a/index.html
+++ b/index.html
@@ -9,15 +9,60 @@
 <body>
     
     <div class="header">
-
+        <div class="search-container">
+            <embed src="./assets/svgs/search.svg" type="image/svg+xml">
+            <input type="text" class="search-bar">
+        </div>
     </div>
 
     <div class="sidebar">
+        <ul class="sidebar-list">
+            <li class="dashboard-item">
+                <embed src="./assets/svgs/dashboard.svg" type="image/svg+xml">
+                <p>Dashboard</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/home.svg" type="image/svg+xml">
+                <p>Home</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/profile.svg" type="image/svg+xml">
+                <p>Profile</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/messages.svg" type="image/svg+xml">
+                <p>Messages</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/history.svg" type="image/svg+xml">
+                <p>History</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/tasks.svg" type="image/svg+xml">
+                <p>Tasks</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/communities.svg" type="image/svg+xml">
+                <p>Communities</p>
+            </li>
+            <li class="settings">
+                <embed src="./assets/svgs/settings.svg" type="image/svg+xml">
+                <p>Settings</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/support.svg" type="image/svg+xml">
+                <p>Support</p>
+            </li>
+            <li>
+                <embed src="./assets/svgs/privacy.svg" type="image/svg+xml">
+                <p>Privacy</p>
+            </li>
+        </ul>
 
     </div>
 
     <div class="main-container">
-        
+
     </div>
 
 </body>
