--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
             <embed src="./assets/svgs/search.svg" type="image/svg+xml">
             <input type="text" class="search-bar">
         </div>
+        <div class="profile-container">
+            <embed src="./assets/svgs/bell.svg" type="image/svg+xml">
+            <embed src="./assets/svgs/cat.svg" type="image/svg+xml">
+            <p>Morgan Oakley</p>
+        </div>
+        <div class="greeting-container">
+            <embed src="./assets/svgs/cat.svg" type="image/svg+xml">
+            <p>Hi there,</p>
+            <p>Morgan Oakley (@morgan)</p>
+        </div>
+        <div class="button-container">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+        </div>
     </div>
 
     <div class="sidebar">
