finish header container

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
             <p>Morgan Oakley</p>
         </div>
         <div class="greeting-container">
-            <embed src="./assets/svgs/cat.svg" type="image/svg+xml">
-            <p>Hi there,</p>
-            <p>Morgan Oakley (@morgan)</p>
+            <div class="icon-wrapper">
+                <embed src="./assets/svgs/cat.svg" type="image/svg+xml">
+            </div>
+            <p class="greeting">Hi there,</p>
+            <p class="name">Morgan Oakley (@morgan)</p>
         </div>
         <div class="button-container">
             <button>New</button>
